# tsms-aau

./: .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  devbox.json
src/: config.rs  lib.rs  main.rs
src/db/: admin_repository.rs  journal_repository.rs  mod.rs  schema.rs  submission_repository.rs
src/errors/: mod.rs
src/models/: admin.rs  journals.rs  mod.rs  response.rs  submission.rs
src/routes/: about.rs  admin.rs  auth.rs  editorial.rs  journals.rs  landing.rs  manuscript.rs  mod.rs  submissions.rs
src/static/css/: admin.css  style.css
src/static/js/: main.js
src/utils/: mod.rs  security.rs
templates/: about.html  landing.html
templates/admin/: edit_journal.html  index.html  login.html  submitted.html  upload.html
templates/admin/layouts/: base.html
templates/editorial/: board.html
templates/journals/: details.html  journal.html
templates/layouts/: base.html
templates/manuscript/: manuscript.html
templates/submissions/: submit.html
