[package]
name = "journal-site"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.9.0"
askama = "0.12.1"
askama_escape = "0.13.0"
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.11.2"
futures = "0.3.31"
log = "0.4.21"
rand = "0.9.0"
regex = "1.11.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
validator = "0.20.0"
